--- a/chapitre3.tex
+++ b/chapitre3.tex
@@ -69,7 +69,7 @@ Les graphes de calculs offrent une très grande liberté. Il est possible de rep
 \EndProcedure
 \end{algorithmic}
 \caption{Algorithme d'évaluation d'un graphe de calculs.}
-\label{propagation_memoisation}
+\label{propagation_memoisation1}
 \end{algorithm}
 
 Nous remarquons que l'algorithme de propagation est très similaire à celui décrit pour les réseaux de neurones. En effet, les graphes de calculs en sont une généralisation.
