--- a/biblio.tex
+++ b/biblio.tex
@@ -29,4 +29,6 @@
 \nocite{vasanth_kalingeri_music_2016}
 
 \bibliographystyle{plain}
-\bibliography{compte-rendu.bib}
+
+\bibliography{bibliographie}
+\addcontentsline{toc}{chapter}{Bibliographie}
